add team members space for description

--- a/lang/es.json
+++ b/lang/es.json
@@ -1,6 +1,7 @@
 {
   "title": "KeepItFresh",
   "menu": {
+    "aboutus": "Equipo",
     "about": "Acerca",
     "features": "Características",
     "contact": "Contacto"
