--- a/lang/en.json
+++ b/lang/en.json
@@ -1,6 +1,7 @@
 {
   "title": "KeepItFresh",
   "menu": {
+    "aboutus": "Team",
     "about": "About",
     "features": "Features",
     "contact": "Contact"
