--- a/lang/es.json
+++ b/lang/es.json
@@ -1,4 +1,14 @@
 {
+  "meta": {
+    "title": "KeepItFresh | Optimiza tu restaurante con inteligencia",
+    "description": "KeepItFresh es una solución inteligente para restaurantes que optimiza la gestión de inventario, temperatura y atención al cliente.",
+    "keywords": "KeepItFresh, gestión de restaurantes, inventario, temperatura, atención al cliente, tecnología para restaurantes",
+    "author": "Equipo KeepItFresh",
+    "og_title": "KeepItFresh | Optimiza tu restaurante con inteligencia",
+    "og_description": "Solución inteligente para gestión de inventario, temperatura y atención al cliente en restaurantes.",
+    "twitter_title": "KeepItFresh | Optimiza tu restaurante con inteligencia",
+    "twitter_description": "Solución inteligente para restaurantes. Gestión de inventario, temperatura y más."
+  },
   "title": "KeepItFresh",
   "menu": {
     "aboutus": "Equipo",
@@ -8,21 +18,75 @@
   },
   "slogan": {
     "title": "Optimiza tu restaurante con inteligencia y frescura",
-    "desc": "KeepItFresh es una solución inteligente que optimiza la gestión de inventario, temperatura y atención al cliente en restaurantes."
+    "desc": "KeepItFresh es una solución inteligente que optimiza la gestión de inventario, temperatura y atención al cliente en restaurantes.",
+    "register": "¡Regístrate ahora!"
+  },
+  "team": {
+    "title": "ClearView",
+    "marco": {
+      "name": "Marco Nakasone",
+      "subtitle": "Desarrollador fullstack en formación",
+      "desc": "Curioso y con muchas ganas de aprender. Le gusta participar en todas las etapas del desarrollo y aportar ideas nuevas al equipo."
+    },
+    "pedro": {
+      "name": "Pedro Guia",
+      "subtitle": "Desarrollador móvil",
+      "desc": "Interesado en el desarrollo de apps para celulares. Siempre está buscando formas de hacer las aplicaciones más rápidas, útiles y accesibles."
+    },
+    "ayrton": {
+      "name": "Ayrton Briceño",
+      "subtitle": "Líder del equipo",
+      "desc": "Estudiante con gusto por la gestión de proyectos y el desarrollo backend. Siempre está motivando al grupo y buscando soluciones a los desafíos del equipo."
+    },
+    "werner": {
+      "name": "Werner Lang",
+      "subtitle": "Especialista en bases de datos y seguridad",
+      "desc": "Le interesa todo lo relacionado con la protección de datos y el manejo eficiente de la información. Siempre busca asegurar que el sistema sea confiable y seguro."
+    },
+    "ernesto": {
+      "name": "Ernesto Rodas",
+      "subtitle": "Diseñador y desarrollador front-end",
+      "desc": "Apasionado por el diseño y la experiencia del usuario. Le gusta crear interfaces limpias y que sean fáciles de usar."
+    }
   },
   "about": {
     "title": "Nuestra esencia",
-    "desc": "Somos una solución inteligente que se encargará de optimizar la gestión de los inventarios de restaurantes. Además de permitir hacer un seguimiento en tiempo real de los productos, evitando así la pérdida de los alimentos. Una solución óptima la cual facilita el proceso de atención al cliente proporcionándole una herramienta fácil y didáctica."
+    "desc": "Somos una solución inteligente que se encargará de optimizar la gestión de los inventarios de restaurantes. Además de permitir hacer un seguimiento en tiempo real de los productos, evitando así la pérdida de los alimentos. Una solución óptima la cual facilita el proceso de atención al cliente proporcionándole una herramienta fácil y didáctica.",
+    "mission_title": "Misión",
+    "mission_desc": "Impulsar la eficiencia y sostenibilidad en la industria restaurantera a través de soluciones tecnológicas innovadoras que optimicen la gestión de recursos y mejoren la experiencia del cliente.",
+    "vision_title": "Visión",
+    "vision_desc": "Ser la plataforma líder en soluciones inteligentes para restaurantes a nivel global, reconocida por nuestra capacidad de transformar la operación diaria y contribuir a un futuro más sostenible para el sector.",
+    "values_title": "Valores",
+    "values_innovation": "<strong>1.Innovación:</strong> Evolucionamos constantemente con el sector gastronómico.",
+    "values_accessibility": "<strong>2.Accesibilidad:</strong> Calidad a precios justos.",
+    "values_customer_focus": "<strong>3.Orientación al cliente:</strong> Soluciones prácticas y fáciles.",
+    "values_quality": "<strong>4.Calidad:</strong> Altos estándares en todo.",
+    "values_responsibility": "<strong>5.Responsabilidad:</strong> Sostenibilidad y menos desperdicio."
   },
   "features": {
     "title": "Características",
-    "track": "Seguimiento en tiempo real.",
-    "alerts": "Alertas y notificaciones.",
-    "integration": "Manejo de temperatura y fecha de caducidad.",
-    "notifications": "Gestión del inventario."
+    "track_title": "Seguimiento en tiempo real",
+    "track_desc": "Monitorea el estado de los productos minuto a minuto para tomar decisiones rápidas y acertadas.",
+    "temperature_title": "Manejo de temperatura",
+    "temperature_desc": "Recibe avisos automáticos ante cualquier irregularidad o cuando se acerque la fecha de vencimiento.",
+    "alerts_title": "Alertas y notificaciones",
+    "alerts_desc": "Controla fácilmente las condiciones clave que afectan la calidad del inventario, como la temperatura y el tiempo de almacenamiento.",
+    "inventory_title": "Gestión del inventario",
+    "inventory_desc": "Optimiza tus niveles de stock, reduce el desperdicio y mejora la planificación de compras.",
+    "waiter_title": "Llamado al mozo",
+    "waiter_desc": "Un dispositivo que el cliente presiona para poder llamar al mozo con mayor facilidad."
   },
   "contact": {
-    "title": "Contáctanos",
-    "send": "Enviar"
+    "title": "¿ALGUNA DUDA?",
+    "subtitle": "Mándanos un correo:",
+    "form": {
+      "name": "Full Name",
+      "name_placeholder": "Ingresa su nombre completo",
+      "email": "Email Address",
+      "email_placeholder": "Ingresa su correo electronico",
+      "details": "Details",
+      "details_placeholder": "Ingresa tus detalles",
+      "send": "Enviar"
+    }
   }
 }
